Added localStorage, list of table

--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="bg-start"><input type="text" placeholder="Название таблицы"><button type="submit"></button></div>
-<div class="wrapper">
-  <table class="table">
-    <caption></caption>
-    <tbody></tbody>
-  </table>
+<div class="bg-start">
+  <form action="#" method="get" class="bg-start__wrap">
+    <input type="text" placeholder="Название таблицы">
+    <button type="submit"></button>
+  </form>
+  <h3 class="table-list__title">Ваши таблицы:</h3>
+  <ul class="table-list">
+  </ul>
+  </div>
+  <div class="wrapper">
+    <table class="table">
+      <caption></caption>
+      <tbody></tbody>
+    </table>
+  </div>
 </div>
 
 <div class="wrap__btn">
