Added clear table

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <h3 class="table-list__title">Ваши таблицы:</h3>
   <ul class="table-list">
   </ul>
+  <button class="table-list__button">Удалить таблицу</button>
   </div>
   <div class="wrapper">
     <table class="table">
